deployment.yml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      run: serviceexplorer
    name: serviceexplorer
    namespace: luciendev
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        run: serviceexplorer
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          run: serviceexplorer
      spec:
        containers:
        - image: lucienmartijn/xrouterserviceexplorer_web:latest
          imagePullPolicy: Always
          name: serviceexplorer
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    name: serviceexplorer
    namespace: luciendev
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      run: serviceexplorer
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
